# platform.core.uifw.pepper

./: .gitignore  AUTHORS  CODING_STYLE  COPYING  Makefile.am  configure.ac
desktop-shell/: configure.ac
desktop-shell/src/: Makefile.am  desktop-shell-internal.h  pepper-desktop-shell.h  pepper-desktop-shell.pc.in  shell-surface.c  shell.c  wl-shell.c  xdg-shell.c
doc/: .gitignore  Makefile.am
doc/doxygen/: pepper.doxygen.in
doctor/: configure.ac
drm/: configure.ac
drm/src/: drm-common.c  drm-internal.h  drm-output.c  pepper-drm.h  pepper-drm.pc.in
fbdev/: configure.ac
fbdev/src/: fbdev-common.c  fbdev-internal.h  fbdev-output.c  pepper-fbdev.h  pepper-fbdev.pc.in
libinput/: configure.ac
libinput/src/: Makefile.am  libinput-internal.h  libinput.c  pepper-libinput.h  pepper-libinput.pc.in
packaging/: pepper.spec
pepper/: configure.ac
pepper/packaging/: pepper.spec
pepper/src/: Makefile.am  buffer.c  common.h  compositor.c  data-device.c  input.c  layer.c  object.c  output.c  pepper-internal.h  pepper-output-backend.h  pepper-utils.h  pepper.h  pepper.pc.in  plane.c  region.c  surface.c  utils-file.c  utils-log.c  utils-map.c  view.c
pkgconfig/: pepper-desktop-shell.pc.in  pepper-drm.pc.in  pepper-fbdev.pc.in  pepper-libinput.pc.in  pepper-render.pc.in  pepper-tdm.pc.in  pepper-wayland.pc.in  pepper-x11.pc.in  pepper.pc.in
render/: configure.ac
render/src/: Makefile.am  gl-renderer.c  pepper-gl-renderer.h  pepper-pixman-renderer.h  pepper-render-internal.h  pepper-render.h  pepper-render.pc.in  pixman-renderer.c  renderer.c
samples/: configure.ac
samples/src/: Makefile.am  drm-backend.c  fbdev-backend.c  simple-touch.c  wayland-backend.c  x11-backend.c
shared/: Makefile.am  pepper-os-compat.c  pepper-os-compat.h
src/: Makefile.am  buffer.c  client.c  common.c  common.h  compositor.c  debug_ch.c  debug_ch.h  gl-renderer.c  input.c  layer.c  log.c  output.c  pepper-gl-renderer.h  pepper-internal.h  pepper-pixman-renderer.h  pepper-util.c  pepper-util.h  pepper.c  pepper.h  pepper_internal.h  pixman-renderer.c  region.c  renderer.c  shell.c  surface.c
src/lib/: Makefile.am
src/lib/desktop-shell/: Makefile.am  configure.ac  desktop-shell-internal.h  pepper-desktop-shell.h  pepper-shell.c  shell-client.c  shell-surface.c  shell.c  wl-shell.c  xdg-shell.c
src/lib/desktop-shell/protocol/: pepper-shell.xml
src/lib/drm/: Makefile.am  configure.ac  drm-buffer.c  drm-common.c  drm-connector.c  drm-internal.h  drm-output.c  drm-plane.c  pepper-drm.h
src/lib/fbdev/: Makefile.am  configure.ac  fbdev-common.c  fbdev-internal.h  fbdev-output.c  pepper-fbdev.h
src/lib/libinput/: Makefile.am  configure.ac  libinput-internal.h  libinput.c  pepper-libinput.h
src/lib/pepper/: Makefile.am  README  buffer.c  common.h  compositor.c  configure.ac  data-device.c  input.c  keyboard.c  misc.c  object.c  output.c  pepper-input-backend.h  pepper-internal.h  pepper-output-backend.h  pepper-utils.h  pepper.h  plane.c  pointer.c  region.c  subcompositor.c  subsurface.c  surface.c  touch.c  utils-file.c  utils-log.c  utils-map.c  utils-vt.c  utils.c  view.c
src/lib/render/: Makefile.am  configure.ac  eglextwayland.h  gl-renderer.c  pepper-gl-renderer.h  pepper-pixman-renderer.h  pepper-render-internal.h  pepper-render.h  pixman-renderer.c  renderer.c
src/lib/tdm/: Makefile.am  pepper-tdm.h  tdm-common.c  tdm-internal.h  tdm-output.c
src/lib/wayland/: Makefile.am  configure.ac  pepper-wayland.h  wayland-common.c  wayland-input.c  wayland-internal.h  wayland-output.c  wayland-shm-buffer.c
src/lib/x11/: Makefile.am  configure.ac  pepper-x11.h  x11-common.c  x11-cursor.c  x11-input.c  x11-internal.h  x11-output.c
src/modules/: input_libinput.c
src/modules/desktop-shell/: desktop-shell-internal.h  shell-surface.c  shell.c  wl-shell.c
src/modules/drm/: drm-common.c  drm-internal.h  drm-output.c  pepper-drm.h
src/modules/libinput/: libinput-internal.h  libinput.c  pepper-libinput.h
src/modules/wayland/: pepper-wayland.h  wayland-common.c  wayland-input.c  wayland-internal.h  wayland-output.c  wayland-shm-buffer.c
src/modules/x11/: pepper-x11.h  x11-common.c  x11-cursor.c  x11-input.c  x11-internal.h  x11-output.c
src/samples/: Makefile.am  configure.ac  drm-backend.c  fbdev-backend.c  simple-shm.c  simple-touch.c  tdm-backend.c  wayland-backend.c  x11-backend.c
src/server/: server.c
test/: Makefile.am  drm-backend.c  simple-shm.c  simple-touch.c  wayland-backend.c  x11-backend.c
utils/: configure.ac
utils/src/: Makefile.am  pepper-utils.h  pepper-utils.pc.in
wayland/: configure.ac
wayland/src/: Makefile.am  pepper-wayland.h  pepper-wayland.pc.in  wayland-common.c  wayland-input.c  wayland-internal.h  wayland-output.c  wayland-shm-buffer.c
x11/: configure.ac
x11/src/: pepper-x11.h  pepper-x11.pc.in  x11-common.c  x11-cursor.c  x11-input.c  x11-internal.h  x11-output.c
