noinst_PROGRAMS =

# drm-backend
noinst_PROGRAMS += drm-backend
drm_backend_CFLAGS = $(DRM_BACKEND_CFLAGS)
drm_backend_LDADD = $(DRM_BACKEND_LIBS)
drm_backend_SOURCES = drm-backend.c

# wayland-backend
noinst_PROGRAMS += wayland-backend
wayland_backend_CFLAGS = $(WAYLAND_BACKEND_CFLAGS)
wayland_backend_LDADD = $(WAYLAND_BACKEND_LIBS)
wayland_backend_SOURCES = wayland-backend.c

# x11-backend
noinst_PROGRAMS += x11-backend
x11_backend_CFLAGS = $(X11_BACKEND_CFLAGS)
x11_backend_LDADD = $(X11_BACKEND_LIBS)
x11_backend_SOURCES = x11-backend.c

# simple-touch
noinst_PROGRAMS += simple-touch
simple_touch_CFLAGS = $(SIMPLE_TOUCH_CFLAGS)
simple_touch_LDADD = $(SIMPLE_TOUCH_LIBS)
simple_touch_SOURCES = simple-touch.c

# simple-shm
noinst_PROGRAMS += simple-shm
simple_shm_CFLAGS = $(SIMPLE_TOUCH_CFLAGS)
simple_shm_LDADD = $(SIMPLE_TOUCH_LIBS)
simple_shm_SOURCES = simple-shm.c
